Se añade funciones para calcular factor de recuperacion

--- a/python/Tesis_ModeloOCRA.ipynb
+++ b/python/Tesis_ModeloOCRA.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "z4tbKmWW_-xO"
       },
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "sgfbq09AE0Gt"
       },
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -89,9 +89,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "etiquetado.mp4\n"
+          ]
+        }
+      ],
       "source": [
         "# Obtener y mostrar los nombres de todos los videos\n",
         "for video_path in videos:\n",
@@ -101,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "4W3aozRXbO8v"
       },
@@ -144,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -173,12 +181,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'def analyze_videos_in_folder(video_folder, output_json_path):\\n    all_analysis_results = []\\n    \\n    for video_file in os.listdir(video_folder):\\n        if video_file.endswith((\\'.mp4\\', \\'.avi\\', \\'.mov\\')):\\n            video_path = os.path.join(video_folder, video_file)\\n            video_name = os.path.splitext(video_file)[0]\\n            \\n            keypoints_list = detect_keypoints(video_path)\\n            cap = cv2.VideoCapture(video_path)\\n            fps = int(cap.get(cv2.CAP_PROP_FPS))\\n            cap.release()\\n\\n            analysis_results = analyze_keypoints(keypoints_list, video_name, fps)\\n            all_analysis_results.extend(analysis_results)\\n            draw_keypoints_and_angles(video_path, analysis_results, output_folder, output_video_folder, json_folder)\\n    \\n    combined_json_path = os.path.join(json_folder, \\'Resultado_analisis_combinados.json\\')\\n    with open(output_json_path, \\'w\\') as json_file:\\n        json.dump(all_analysis_results, json_file, indent=4)\\n\\n    print(f\"Resultados del análisis exportados a: {output_json_path}\")\\n\\n# Ejemplo de uso:\\n#video_folder = \\'C:\\\\Tesis\\\\TestErgo\\\\muestra\\'\\nvideo_folder = video_dir #\\'C:\\\\Tesis\\\\TestErgo\\\\VIDEOS MAQUILAS\\'\\noutput_json_path = \\'C:\\\\Tesis\\\\TestErgo\\\\analisis_videos.json\\'\\n\\nanalyze_videos_in_folder(video_folder, output_json_path)'"
+            ]
+          },
+          "execution_count": 38,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Función para analizar videos masivos y guardar resultados en un solo JSON\n",
-        "def analyze_videos_in_folder(video_folder, output_json_path):\n",
+        "'''def analyze_videos_in_folder(video_folder, output_json_path):\n",
         "    all_analysis_results = []\n",
         "    \n",
         "    for video_file in os.listdir(video_folder):\n",
@@ -206,12 +225,12 @@
         "video_folder = video_dir #'C:\\\\Tesis\\\\TestErgo\\\\VIDEOS MAQUILAS'\n",
         "output_json_path = 'C:\\\\Tesis\\\\TestErgo\\\\analisis_videos.json'\n",
         "\n",
-        "analyze_videos_in_folder(video_folder, output_json_path)\n"
+        "analyze_videos_in_folder(video_folder, output_json_path)'''\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -306,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -418,35 +437,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Tesis\\TesisOCRA\\TesisCheckListOCRA\\python\\venv\\Lib\\site-packages\\google\\protobuf\\symbol_database.py:55: UserWarning: SymbolDatabase.GetPrototype() is deprecated. Please use message_factory.GetMessageClass() instead. SymbolDatabase.GetPrototype() will be removed soon.\n",
-            "  warnings.warn('SymbolDatabase.GetPrototype() is deprecated. Please '\n"
-          ]
-        },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Frames exportados a: C:\\Tesis\\TestErgo\\resultados\\maquila006\n",
-            "Video exportado a: C:\\Tesis\\TestErgo\\videoMarcado\\maquila006_20240714_233305.mp4\n",
-            "JSON exportado a: C:\\Tesis\\TestErgo\\archivos_json\\maquila006_20240714_233305.json\n"
+            "Frames exportados a: C:\\Tesis\\TestErgo\\resultados\\etiquetado\n",
+            "Video exportado a: C:\\Tesis\\TestErgo\\videoMarcado\\etiquetado_20240716_081020.mp4\n",
+            "JSON exportado a: C:\\Tesis\\TestErgo\\archivos_json\\etiquetado_20240716_081020.json\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "('C:\\\\Tesis\\\\TestErgo\\\\resultados\\\\maquila006',\n",
-              " 'C:\\\\Tesis\\\\TestErgo\\\\videoMarcado\\\\maquila006_20240714_233305.mp4',\n",
-              " 'C:\\\\Tesis\\\\TestErgo\\\\archivos_json\\\\maquila006_20240714_233305.json')"
+              "('C:\\\\Tesis\\\\TestErgo\\\\resultados\\\\etiquetado',\n",
+              " 'C:\\\\Tesis\\\\TestErgo\\\\videoMarcado\\\\etiquetado_20240716_081020.mp4',\n",
+              " 'C:\\\\Tesis\\\\TestErgo\\\\archivos_json\\\\etiquetado_20240716_081020.json')"
             ]
           },
-          "execution_count": 59,
+          "execution_count": 41,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -458,6 +469,161 @@
         "json_folder = 'C:\\\\Tesis\\\\TestErgo\\\\archivos_json'\n",
         "\n",
         "draw_keypoints_and_angles(video_path, output_folder, output_video_folder, json_folder)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Factor Recuperacion"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Duración del video: 189.08695652173913 segundos\n",
+            "Pausas detectadas:\n"
+          ]
+        }
+      ],
+      "source": [
+        "mp_pose = mp.solutions.pose\n",
+        "\n",
+        "def detectar_movimiento(frame, pose, umbral_movimiento=0.05):\n",
+        "    # Convertir la imagen de BGR a RGB\n",
+        "    frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+        "    results = pose.process(frame_rgb)\n",
+        "    \n",
+        "    # Si no se detecta ninguna pose, considerar que no hay movimiento\n",
+        "    if not results.pose_landmarks:\n",
+        "        return False\n",
+        "\n",
+        "    # Extraer los puntos clave de la pose detectada\n",
+        "    keypoints = results.pose_landmarks.landmark\n",
+        "    keypoints_array = np.array([[kp.x, kp.y, kp.z] for kp in keypoints])\n",
+        "\n",
+        "    # Comparar con la pose anterior para detectar movimiento\n",
+        "    if not hasattr(detectar_movimiento, \"pose_anterior\"):\n",
+        "        detectar_movimiento.pose_anterior = keypoints_array\n",
+        "        return False\n",
+        "\n",
+        "    # Calcular la distancia media entre los puntos clave actuales y los anteriores\n",
+        "    diferencia = np.linalg.norm(detectar_movimiento.pose_anterior - keypoints_array, axis=1)\n",
+        "    movimiento = np.mean(diferencia) > umbral_movimiento\n",
+        "\n",
+        "    # Actualizar la pose anterior\n",
+        "    detectar_movimiento.pose_anterior = keypoints_array\n",
+        "\n",
+        "    return movimiento\n",
+        "\n",
+        "def analizar_pausas_y_recuperacion(video_path, umbral_inactividad=10):\n",
+        "    cap = cv2.VideoCapture(video_path)\n",
+        "    if not cap.isOpened():\n",
+        "        print(f\"Error al abrir el video: {video_path}\")\n",
+        "        return\n",
+        "\n",
+        "    fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
+        "    frame_count = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+        "    duration = frame_count / fps\n",
+        "    print(f\"Duración del video: {duration} segundos\")\n",
+        "\n",
+        "    # Variables para almacenar las pausas y tiempos de inactividad\n",
+        "    pausas = []\n",
+        "    #inactividad = []\n",
+        "\n",
+        "    # Variables temporales para detectar pausas\n",
+        "    inicio_pausa = None\n",
+        "    duracion_pausa = 0\n",
+        "    en_pausa = False\n",
+        "\n",
+        "    with mp_pose.Pose(static_image_mode=False, min_detection_confidence=0.5, min_tracking_confidence=0.5) as pose:\n",
+        "        for i in range(frame_count):\n",
+        "            ret, frame = cap.read()\n",
+        "            if not ret:\n",
+        "                break\n",
+        "\n",
+        "            movimiento_detectado = detectar_movimiento(frame, pose)\n",
+        "\n",
+        "            if not movimiento_detectado:\n",
+        "                if not en_pausa:\n",
+        "                    inicio_pausa = i / fps\n",
+        "                    en_pausa = True\n",
+        "                duracion_pausa += 1 / fps\n",
+        "            else:\n",
+        "                if en_pausa and duracion_pausa >= umbral_inactividad:\n",
+        "                    pausas.append((inicio_pausa, inicio_pausa + duracion_pausa))\n",
+        "                inicio_pausa = None\n",
+        "                duracion_pausa = 0\n",
+        "                en_pausa = False\n",
+        "\n",
+        "        # Agregar la última pausa si terminó en el último frame\n",
+        "        if en_pausa and duracion_pausa >= umbral_inactividad:\n",
+        "            pausas.append((inicio_pausa, inicio_pausa + duracion_pausa))\n",
+        "\n",
+        "    cap.release()\n",
+        "\n",
+        "    # Imprimir resultados\n",
+        "    print(\"Pausas detectadas:\")\n",
+        "    for inicio, fin in pausas:\n",
+        "        print(f\"Inicio: {inicio:.2f} segundos, Fin: {fin:.2f} segundos, Duración: {fin - inicio:.2f} segundos\")\n",
+        "\n",
+        "    return pausas\n",
+        "\n",
+        "# Ejemplo de uso:\n",
+        "video_path = videos[0]\n",
+        "pausas = analizar_pausas_y_recuperacion(video_path)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Paso 2: Determinación de Tiempos de Recuperación"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Factor de Recuperación (FR): 0.02631578947368421\n",
+            "Tiempo Neto de Trabajo Repetitivo (TNTR): 380.0 minutos\n"
+          ]
+        }
+      ],
+      "source": [
+        "def calcular_factor_recuperacion(pauses, duracion_turno, tiempo_almuerzo, tiempo_no_repetitivo):\n",
+        "    # Calcular la duración total de las pausas en minutos\n",
+        "    total_duracion_pausas = sum((pausa[1] - pausa[0]) for pausa in pauses) / 60.0  # Convertir de segundos a minutos\n",
+        "\n",
+        "    # Calcular el tiempo neto de trabajo repetitivo (TNTR)\n",
+        "    TNTR = duracion_turno - (total_duracion_pausas + tiempo_almuerzo + tiempo_no_repetitivo)\n",
+        "\n",
+        "    # Calcular el Factor de Recuperación (FR)\n",
+        "    # Esto dependerá de la fórmula o tabla específica que utilices\n",
+        "    FR = total_duracion_pausas / TNTR  # Ejemplo simple, ajusta git según tu metodología\n",
+        "\n",
+        "    return FR, TNTR\n",
+        "\n",
+        "# Ejemplo de uso\n",
+        "pauses = [(600, 900), (1800, 2100)]  # Pausas en segundos\n",
+        "duracion_turno = 480  # Duración del turno en minutos\n",
+        "tiempo_almuerzo = 30  # Tiempo de almuerzo en minutos\n",
+        "tiempo_no_repetitivo = 60  # Tiempo de trabajo no repetitivo en minutos\n",
+        "\n",
+        "FR, TNTR = calcular_factor_recuperacion(pauses, duracion_turno, tiempo_almuerzo, tiempo_no_repetitivo)\n",
+        "print(f\"Factor de Recuperación (FR): {FR}\")\n",
+        "print(f\"Tiempo Neto de Trabajo Repetitivo (TNTR): {TNTR} minutos\")"
       ]
     }
   ],
