Se añaden archivos .py correspondiente a factores, configuracion, utils, routes, este código ha sido migrado desde el cuaderno jupyter

--- a/python/Tesis_ModeloOCRA.ipynb
+++ b/python/Tesis_ModeloOCRA.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 1,
       "metadata": {
         "id": "z4tbKmWW_-xO"
       },
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 3,
       "metadata": {
         "id": "sgfbq09AE0Gt"
       },
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 7,
       "metadata": {
         "id": "4W3aozRXbO8v"
       },
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -190,7 +190,7 @@
               "'def analyze_videos_in_folder(video_folder, output_json_path):\\n    all_analysis_results = []\\n    \\n    for video_file in os.listdir(video_folder):\\n        if video_file.endswith((\\'.mp4\\', \\'.avi\\', \\'.mov\\')):\\n            video_path = os.path.join(video_folder, video_file)\\n            video_name = os.path.splitext(video_file)[0]\\n            \\n            keypoints_list = detect_keypoints(video_path)\\n            cap = cv2.VideoCapture(video_path)\\n            fps = int(cap.get(cv2.CAP_PROP_FPS))\\n            cap.release()\\n\\n            analysis_results = analyze_keypoints(keypoints_list, video_name, fps)\\n            all_analysis_results.extend(analysis_results)\\n            draw_keypoints_and_angles(video_path, analysis_results, output_folder, output_video_folder, json_folder)\\n    \\n    combined_json_path = os.path.join(json_folder, \\'Resultado_analisis_combinados.json\\')\\n    with open(output_json_path, \\'w\\') as json_file:\\n        json.dump(all_analysis_results, json_file, indent=4)\\n\\n    print(f\"Resultados del análisis exportados a: {output_json_path}\")\\n\\n# Ejemplo de uso:\\n#video_folder = \\'C:\\\\Tesis\\\\TestErgo\\\\muestra\\'\\nvideo_folder = video_dir #\\'C:\\\\Tesis\\\\TestErgo\\\\VIDEOS MAQUILAS\\'\\noutput_json_path = \\'C:\\\\Tesis\\\\TestErgo\\\\analisis_videos.json\\'\\n\\nanalyze_videos_in_folder(video_folder, output_json_path)'"
             ]
           },
-          "execution_count": 38,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -325,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -437,27 +437,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Tesis\\TesisOCRA\\TesisCheckListOCRA\\python\\venv\\Lib\\site-packages\\google\\protobuf\\symbol_database.py:55: UserWarning: SymbolDatabase.GetPrototype() is deprecated. Please use message_factory.GetMessageClass() instead. SymbolDatabase.GetPrototype() will be removed soon.\n",
+            "  warnings.warn('SymbolDatabase.GetPrototype() is deprecated. Please '\n"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
             "Frames exportados a: C:\\Tesis\\TestErgo\\resultados\\etiquetado\n",
-            "Video exportado a: C:\\Tesis\\TestErgo\\videoMarcado\\etiquetado_20240716_081020.mp4\n",
-            "JSON exportado a: C:\\Tesis\\TestErgo\\archivos_json\\etiquetado_20240716_081020.json\n"
+            "Video exportado a: C:\\Tesis\\TestErgo\\videoMarcado\\etiquetado_20240718_200217.mp4\n",
+            "JSON exportado a: C:\\Tesis\\TestErgo\\archivos_json\\etiquetado_20240718_200217.json\n"
           ]
         },
         {
           "data": {
             "text/plain": [
               "('C:\\\\Tesis\\\\TestErgo\\\\resultados\\\\etiquetado',\n",
-              " 'C:\\\\Tesis\\\\TestErgo\\\\videoMarcado\\\\etiquetado_20240716_081020.mp4',\n",
-              " 'C:\\\\Tesis\\\\TestErgo\\\\archivos_json\\\\etiquetado_20240716_081020.json')"
+              " 'C:\\\\Tesis\\\\TestErgo\\\\videoMarcado\\\\etiquetado_20240718_200217.mp4',\n",
+              " 'C:\\\\Tesis\\\\TestErgo\\\\archivos_json\\\\etiquetado_20240718_200217.json')"
             ]
           },
-          "execution_count": 41,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -480,7 +488,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -589,15 +597,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Factor de Recuperación (FR): 0.02631578947368421\n",
-            "Tiempo Neto de Trabajo Repetitivo (TNTR): 380.0 minutos\n"
+            "Factor de Recuperación (FR): 0.0273972602739726\n",
+            "Tiempo Neto de Trabajo Repetitivo (TNTR): 365.0 minutos\n"
           ]
         }
       ],
@@ -618,12 +626,241 @@
         "# Ejemplo de uso\n",
         "pauses = [(600, 900), (1800, 2100)]  # Pausas en segundos\n",
         "duracion_turno = 480  # Duración del turno en minutos\n",
-        "tiempo_almuerzo = 30  # Tiempo de almuerzo en minutos\n",
+        "tiempo_almuerzo = 45  # Tiempo de almuerzo en minutos\n",
         "tiempo_no_repetitivo = 60  # Tiempo de trabajo no repetitivo en minutos\n",
         "\n",
         "FR, TNTR = calcular_factor_recuperacion(pauses, duracion_turno, tiempo_almuerzo, tiempo_no_repetitivo)\n",
         "print(f\"Factor de Recuperación (FR): {FR}\")\n",
         "print(f\"Tiempo Neto de Trabajo Repetitivo (TNTR): {TNTR} minutos\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Análisis de actividad, pausas y cálculo del Factor de Recuperación (FR)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Función para identificar acciones técnicas dinámicas y estáticas\n",
+        "def classify_technical_actions(keypoints):\n",
+        "    atd = 0\n",
+        "    ate = 0\n",
+        "    dynamic_actions = 0\n",
+        "    static_actions = 0\n",
+        "\n",
+        "    for i in range(1, len(keypoints)):\n",
+        "        movement = keypoints[i] - keypoints[i - 1]\n",
+        "        if movement.any():\n",
+        "            dynamic_actions += 1\n",
+        "        else:\n",
+        "            static_actions += 1\n",
+        "\n",
+        "    # Calcular ATD según la tabla proporcionada\n",
+        "    actions_per_minute = (dynamic_actions / (len(keypoints) / 30)) * 60\n",
+        "    if actions_per_minute <= 20:\n",
+        "        atd = 0\n",
+        "    elif actions_per_minute <= 30:\n",
+        "        atd = 1\n",
+        "    elif actions_per_minute <= 40:\n",
+        "        atd = 3\n",
+        "    elif actions_per_minute <= 50:\n",
+        "        atd = 4\n",
+        "    elif actions_per_minute <= 60:\n",
+        "        atd = 6\n",
+        "    elif actions_per_minute <= 70:\n",
+        "        atd = 8\n",
+        "    else:\n",
+        "        atd = 10\n",
+        "\n",
+        "    # Calcular ATE según la tabla proporcionada\n",
+        "    if static_actions >= (2 / 3) * len(keypoints):\n",
+        "        ate = 2.5\n",
+        "    elif static_actions >= (3 / 3) * len(keypoints):\n",
+        "        ate = 4.5\n",
+        "\n",
+        "    return atd, ate\n",
+        "\n",
+        "# Función para analizar la actividad y pausas en el video\n",
+        "def analyze_activity_and_breaks(analysis_results, break_threshold=5):\n",
+        "    activity_periods = []\n",
+        "    break_periods = []\n",
+        "\n",
+        "    current_activity_start = None\n",
+        "    current_break_start = None\n",
+        "    in_activity = False\n",
+        "\n",
+        "    for second, keypoints in enumerate(analysis_results):\n",
+        "        if keypoints:  # Si hay puntos clave detectados, se considera actividad\n",
+        "            if not in_activity:\n",
+        "                current_activity_start = second\n",
+        "                if current_break_start is not None:\n",
+        "                    break_duration = second - current_break_start\n",
+        "                    if break_duration >= break_threshold:\n",
+        "                        break_periods.append((current_break_start, second))\n",
+        "                in_activity = True\n",
+        "        else:  # Si no hay puntos clave detectados, se considera pausa\n",
+        "            if in_activity:\n",
+        "                activity_duration = second - current_activity_start\n",
+        "                activity_periods.append((current_activity_start, second))\n",
+        "                current_break_start = second\n",
+        "                in_activity = False\n",
+        "\n",
+        "    # Agregar el último periodo de actividad o pausa\n",
+        "    if in_activity and current_activity_start is not None:\n",
+        "        activity_periods.append((current_activity_start, analysis_results[-1]))\n",
+        "    if not in_activity and current_break_start is not None:\n",
+        "        break_periods.append((current_break_start, analysis_results[-1]))\n",
+        "\n",
+        "    return activity_periods, break_periods\n",
+        "\n",
+        "# Análisis de actividad, pausas y cálculo del Factor de Frecuencia (FF)\n",
+        "for video_path in videos:\n",
+        "    analysis_results = analyze_keypoints(video_path)\n",
+        "    activity_periods, break_periods = analyze_activity_and_breaks(analysis_results)\n",
+        "\n",
+        "    # Calcular el total de actividad y pausas\n",
+        "    total_activity = sum(end - start for start, end in activity_periods)\n",
+        "    total_break = sum(end - start for start, end in break_periods)\n",
+        "    total_duration = total_activity + total_break\n",
+        "\n",
+        "    # Clasificar las acciones técnicas y calcular ATD y ATE\n",
+        "    atd, ate = classify_technical_actions(analysis_results)\n",
+        "\n",
+        "    # Calcular el Factor de Frecuencia (FF)\n",
+        "    ff = max(atd, ate)\n",
+        "\n",
+        "    # Imprimir los resultados\n",
+        "    print(f\"Video: {os.path.basename(video_path)}\")\n",
+        "    print(\"Periodos de Actividad:\", activity_periods)\n",
+        "    print(\"Periodos de Pausas:\", break_periods)\n",
+        "    print(f\"Total Actividad: {total_activity} segundos\")\n",
+        "    print(f\"Total Pausas: {total_break} segundos\")\n",
+        "    print(f\"Acciones Técnicas Dinámicas (ATD): {atd}\")\n",
+        "    print(f\"Acciones Técnicas Estáticas (ATE): {ate}\")\n",
+        "    print(f\"Factor de Frecuencia (FF): {ff}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Factor fuerza"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'analyze_video' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[18], line 92\u001b[0m\n\u001b[0;32m     89\u001b[0m video_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mruta_al_video.mp4\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     91\u001b[0m \u001b[38;5;66;03m# Ejecutar el análisis y calcular los factores\u001b[39;00m\n\u001b[1;32m---> 92\u001b[0m \u001b[43manalyze_activity_and_calculate_factors\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvideo_path\u001b[49m\u001b[43m)\u001b[49m\n",
+            "Cell \u001b[1;32mIn[18], line 70\u001b[0m, in \u001b[0;36manalyze_activity_and_calculate_factors\u001b[1;34m(video_path)\u001b[0m\n\u001b[0;32m     69\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21manalyze_activity_and_calculate_factors\u001b[39m(video_path):\n\u001b[1;32m---> 70\u001b[0m     keypoints_list \u001b[38;5;241m=\u001b[39m \u001b[43manalyze_video\u001b[49m(video_path)\n\u001b[0;32m     72\u001b[0m     \u001b[38;5;66;03m# Clasificar las acciones técnicas y calcular ATD y ATE\u001b[39;00m\n\u001b[0;32m     73\u001b[0m     atd, ate \u001b[38;5;241m=\u001b[39m classify_technical_actions(keypoints_list)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'analyze_video' is not defined"
+          ]
+        }
+      ],
+      "source": [
+        "import analyze_keypoints\n",
+        "\n",
+        "# Función para clasificar la fuerza aplicada en las acciones técnicas\n",
+        "def classify_force_actions(technical_actions):\n",
+        "    force_scores = []\n",
+        "    for action in technical_actions:\n",
+        "        # Aquí debes agregar tu lógica para evaluar la fuerza aplicada\n",
+        "        # Por ahora, asumiremos fuerza moderada para todos los movimientos\n",
+        "        force_scores.append(1)  # Cambia esto según tu evaluación de fuerza\n",
+        "\n",
+        "    # Calcular la puntuación de la fuerza (FFu) basada en la evaluación\n",
+        "    if force_scores.count(4) > 0:\n",
+        "        ffu = 4\n",
+        "    elif force_scores.count(3) > 0:\n",
+        "        ffu = 3\n",
+        "    elif force_scores.count(2) > 0:\n",
+        "        ffu = 2\n",
+        "    elif force_scores.count(1) > 0:\n",
+        "        ffu = 1\n",
+        "    else:\n",
+        "        ffu = 0\n",
+        "\n",
+        "    return ffu\n",
+        "\n",
+        "# Función para clasificar las acciones técnicas dinámicas y estáticas\n",
+        "def classify_technical_actions(keypoints_list):\n",
+        "    dynamic_actions = 0\n",
+        "    static_actions = 0\n",
+        "\n",
+        "    for i in range(1, len(keypoints_list)):\n",
+        "        if keypoints_list[i] is not None and keypoints_list[i - 1] is not None:\n",
+        "            movement = np.linalg.norm(keypoints_list[i] - keypoints_list[i - 1])\n",
+        "            if movement > 0:\n",
+        "                dynamic_actions += 1\n",
+        "            else:\n",
+        "                static_actions += 1\n",
+        "\n",
+        "    # Calcular ATD según la tabla proporcionada\n",
+        "    actions_per_minute = (dynamic_actions / (len(keypoints_list) / 30)) * 60\n",
+        "    if actions_per_minute <= 20:\n",
+        "        atd = 0\n",
+        "    elif actions_per_minute <= 30:\n",
+        "        atd = 1\n",
+        "    elif actions_per_minute <= 40:\n",
+        "        atd = 3\n",
+        "    elif actions_per_minute <= 50:\n",
+        "        atd = 4\n",
+        "    elif actions_per_minute <= 60:\n",
+        "        atd = 6\n",
+        "    elif actions_per_minute <= 70:\n",
+        "        atd = 8\n",
+        "    else:\n",
+        "        atd = 10\n",
+        "\n",
+        "    # Calcular ATE según la tabla proporcionada\n",
+        "    if static_actions >= (2 / 3) * len(keypoints_list):\n",
+        "        ate = 2.5\n",
+        "    elif static_actions >= (3 / 3) * len(keypoints_list):\n",
+        "        ate = 4.5\n",
+        "    else:\n",
+        "        ate = 0\n",
+        "\n",
+        "    return atd, ate\n",
+        "\n",
+        "# Análisis de actividad, pausas y cálculo del Factor de Frecuencia (FF)\n",
+        "def analyze_activity_and_calculate_factors(video_path):\n",
+        "    keypoints_list = analyze_video(video_path)\n",
+        "\n",
+        "    # Clasificar las acciones técnicas y calcular ATD y ATE\n",
+        "    atd, ate = classify_technical_actions(keypoints_list)\n",
+        "\n",
+        "    # Calcular el Factor de Frecuencia (FF)\n",
+        "    ff = max(atd, ate)\n",
+        "\n",
+        "    # Clasificar y calcular el Factor de Fuerza (FFu)\n",
+        "    ffu = classify_force_actions(keypoints_list)\n",
+        "\n",
+        "    # Imprimir los resultados\n",
+        "    print(f\"Video: {os.path.basename(video_path)}\")\n",
+        "    print(f\"Acciones Técnicas Dinámicas (ATD): {atd}\")\n",
+        "    print(f\"Acciones Técnicas Estáticas (ATE): {ate}\")\n",
+        "    print(f\"Factor de Frecuencia (FF): {ff}\")\n",
+        "    print(f\"Factor de Fuerza (FFu): {ffu}\")\n",
+        "\n",
+        "# Ruta del video\n",
+        "video_path = \"ruta_al_video.mp4\"\n",
+        "\n",
+        "# Ejecutar el análisis y calcular los factores\n",
+        "analyze_activity_and_calculate_factors(video_path)"
       ]
     }
   ],
